--- a/src/app/printer-status/printer-status.component.html
+++ b/src/app/printer-status/printer-status.component.html
@@ -71,6 +71,11 @@
             <div class="quick-control__controller-set" colspan="2" (click)="quickControlSetValue()" matRipple
                 [matRippleUnbounded]="false">
                 <span class="quick-control__controller-set-span">set</span>
+                <select>
+                    <option value="0">Off</option>
+                    <option value="190">PLA</option>
+                    <option value="225">ABS</option>
+                </select>
             </div>
         </div>
     </div>
